--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library that synchronises IAM groups, policies and roles.",
   "main": "src/AwsIAMSynchronisation.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "mock-require": "^3.0.2",
+    "require-intercept": "^1.0.3",
     "sinon": "^7.1.1",
     "sinon-chai": "^3.3.0"
   },
