--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "aws-sdk": "^2.365.0",
-    "deep-diff": "^1.0.2"
+    "deep-diff": "^1.0.2",
+    "glob": "^7.1.3"
   },
   "publishConfig": {
     "access": "public"
