--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/MattLloyd101/aws-iam-synchronisation/issues"
   },
   "homepage": "https://github.com/MattLloyd101/aws-iam-synchronisation#readme",
+  "bin": {
+    "aws-iam-synchronisation": "AwsIAMSynchronisationCLI.js"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
